Adding image clustering and proper dataset formatting

--- a/word2Vec_2811.ipynb
+++ b/word2Vec_2811.ipynb
@@ -54,9 +54,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_tfidf_features(tokens):\n",
+    "def generate_tfidf_features(tokens_array):\n",
     "\n",
-    "    ..."
+    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "    content = []\n",
+    "    for post in tokens_array:\n",
+    "        document = ''\n",
+    "        for word in post:\n",
+    "            document = document + ' ' + word\n",
+    "\n",
+    "        content.append(document)\n",
+    "    content = np.array(content)\n",
+    "\n",
+    "    tf = TfidfVectorizer()\n",
+    "    tfidf_vectors = tf.fit_transform(content)\n",
+    "\n",
+    "    return tfidf_vectors"
    ]
   },
   {
@@ -855,186 +869,6 @@
     "fig.colorbar(cax)#, extend='min')\n",
     "plt.savefig('plots/clustering_predictions_pcaTSNE-groundtruth_2811.png')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "data['post_datetime']=data['datetime'].apply(datetime.datetime.fromtimestamp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_features = ['following', 'likes', 'posts_count', 'followers', 'is_verified', 'post_datetime',\n",
-    " 'comments', 'adultScore', 'racyScore', 'goreScore', 'isBWImg', 'clipArtType', 'lineDrawingType']\n",
-    "\n",
-    "meta_features = data[other_features]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>following</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>posts_count</th>\n",
-       "      <th>followers</th>\n",
-       "      <th>is_verified</th>\n",
-       "      <th>post_datetime</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>adultScore</th>\n",
-       "      <th>racyScore</th>\n",
-       "      <th>goreScore</th>\n",
-       "      <th>isBWImg</th>\n",
-       "      <th>clipArtType</th>\n",
-       "      <th>lineDrawingType</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-10-12 21:03:09</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.001138</td>\n",
-       "      <td>0.002034</td>\n",
-       "      <td>0.000703</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>106</td>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>56</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-11-19 14:43:27</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.014004</td>\n",
-       "      <td>0.016998</td>\n",
-       "      <td>0.002984</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>106</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4</td>\n",
-       "      <td>56</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-11-28 04:52:44</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.002261</td>\n",
-       "      <td>0.011085</td>\n",
-       "      <td>0.011169</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>106</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>56</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-11-23 10:58:29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.005521</td>\n",
-       "      <td>0.009230</td>\n",
-       "      <td>0.000926</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>109</td>\n",
-       "      <td>2778</td>\n",
-       "      <td>309</td>\n",
-       "      <td>72047</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2020-09-17 22:04:44</td>\n",
-       "      <td>161</td>\n",
-       "      <td>0.144270</td>\n",
-       "      <td>0.989714</td>\n",
-       "      <td>0.001252</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   following  likes  posts_count  followers  is_verified       post_datetime  \\\n",
-       "0          2     15            1         28          NaN 2021-10-12 21:03:09   \n",
-       "1        106     10            4         56          NaN 2018-11-19 14:43:27   \n",
-       "2        106      9            4         56          NaN 2018-11-28 04:52:44   \n",
-       "3        106      7            4         56          NaN 2018-11-23 10:58:29   \n",
-       "4        109   2778          309      72047          1.0 2020-09-17 22:04:44   \n",
-       "\n",
-       "   comments  adultScore  racyScore  goreScore  isBWImg  clipArtType  \\\n",
-       "0         4    0.001138   0.002034   0.000703    False            0   \n",
-       "1         0    0.014004   0.016998   0.002984    False            0   \n",
-       "2         0    0.002261   0.011085   0.011169    False            0   \n",
-       "3         1    0.005521   0.009230   0.000926    False            0   \n",
-       "4       161    0.144270   0.989714   0.001252    False            0   \n",
-       "\n",
-       "   lineDrawingType  \n",
-       "0                0  \n",
-       "1                0  \n",
-       "2                0  \n",
-       "3                0  \n",
-       "4                0  "
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta_features.head()"
    ]
   }
  ],
