Adding downloading and processing data output

--- a/like_prediction.ipynb
+++ b/like_prediction.ipynb
@@ -415,6 +415,7 @@
     "%matplotlib inline \n",
     "import matplotlib.pyplot as plt \n",
     "plt.scatter(test_pred, test_true)\n",
+    "#plot on same scale axis\n",
     "plt.xlabel('Predicted likes')\n",
     "plt.ylabel('Actual likes')\n",
     "plt.show()"
